--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "vue": "^3.2.45",
     "vue-backtotop": "^1.6.1",
     "vue-feather": "^2.0.0",
-    "vue-router": "^4.0.13"
+    "vue-router": "^4.0.13",
+    "vue3-autocounter": "^1.0.6"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
